--- a/examples/3.NBodies/Makefile
+++ b/examples/3.NBodies/Makefile
@@ -21,3 +21,14 @@ plot:
 	-mv ./*.png build/
 
 all: clear run plot
+
+build_mpi: clear
+	mpicc -D_ADFINITAS_MPI CAdfinitasExample3.c ../../libCAdfinitas.c ../../libXi.c -o CAdfinitasExample3MPI.run -lm -L../../
+	mkdir -p build/data
+	-mv ./*.run build/
+
+run_mpi: build_mpi
+	mpirun ./build/CAdfinitasExample3MPI.run
+	-mv ./*.dat build/data/
+
+all_mpi: clear run_mpi plot
