--- a/examples/2.EarthSystem/Makefile
+++ b/examples/2.EarthSystem/Makefile
@@ -20,3 +20,14 @@ plot:
 	-mv ./*.png build/
 
 all: clear run plot
+
+build_mpi: clear
+	mpicc -D_ADFINITAS_MPI CAdfinitasExample2.c ../../libCAdfinitas.c ../../libXi.c -o CAdfinitasExample2MPI.run -lm -L../../
+	mkdir -p build/data
+	-mv ./*.run build/
+
+run_mpi: build_mpi
+	mpirun ./build/CAdfinitasExample2MPI.run
+	-mv ./*.dat build/data/
+
+all_mpi: clear run_mpi plots
