Add some new future: 1. Dump/Restore all simulation system to/from files; 2. Add flag for nested MPI barrier; 3. All mathematical structures are seperated to libXi.

--- a/examples/1.SolarSystem/Makefile
+++ b/examples/1.SolarSystem/Makefile
@@ -3,6 +3,7 @@ clear:
 	-mv ./*.gif build/
 	-mv ./*.png build/
 	-mv ./*.dat build/data/
+	-mv ./adfinitasDump_* ./build/
 	-rm -rf ./build
 
 plot:
@@ -13,23 +14,25 @@ plot:
 	-mv ./*.png build/
 
 build: clear
-	gcc CAdfinitasExample1.c ../../libCAdfinitas.c ../../libXi.c -o CAdfinitasExample1.run -lm -L../../
+	gcc -I../../ -I../../../LibXi/ CAdfinitasExample1.c ../../libCAdfinitas.c ../../../LibXi/libXi.c -o CAdfinitasExample1.run -lm
 	mkdir -p build/data
 	-mv ./*.run build/
 
 run: build
 	./build/CAdfinitasExample1.run
 	-mv ./*.dat build/data/
+	-mv ./adfinitasDump_* ./build/
 
 all: clear run plot
 
 build_mpi: clear
-	mpicc -D_ADFINITAS_MPI CAdfinitasExample1.c ../../libCAdfinitas.c ../../libXi.c -o CAdfinitasExample1MPI.run -lm -L../../
+	mpicc -D_ADFINITAS_MPI -I../../ -I../../../LibXi/ -lm CAdfinitasExample1.c ../../libCAdfinitas.c ../../../LibXi/libXi.c -o CAdfinitasExample1MPI.run
 	mkdir -p build/data
 	-mv ./*.run build/
 
 run_mpi: build_mpi
 	mpirun ./build/CAdfinitasExample1MPI.run
 	-mv ./*.dat build/data/
+	-mv ./adfinitasDump_* ./build/
 
 all_mpi: clear run_mpi plot
