--- a/examples/3.NBodies/Makefile
+++ b/examples/3.NBodies/Makefile
@@ -6,7 +6,7 @@ clear:
 	-rm -rf ./build
 
 build: clear
-	gcc CAdfinitasExample3.c ../../libCAdfinitas.c ../../libXi.c -o CAdfinitasExample3.run -lm -L../../
+	gcc -lm -I../../ -I../../../LibXi/ CAdfinitasExample3.c ../../libCAdfinitas.c ../../../LibXi/libXi.c -o CAdfinitasExample3.run
 	mkdir -p build/data
 	-mv ./*.run build/
 
@@ -23,7 +23,7 @@ plot:
 all: clear run plot
 
 build_mpi: clear
-	mpicc -D_ADFINITAS_MPI CAdfinitasExample3.c ../../libCAdfinitas.c ../../libXi.c -o CAdfinitasExample3MPI.run -lm -L../../
+	mpicc -D_ADFINITAS_MPI -lm -I../../ -I../../../LibXi/ CAdfinitasExample3.c ../../../LibXi/libCAdfinitas.c ../../libXi.c -o CAdfinitasExample3MPI.run
 	mkdir -p build/data
 	-mv ./*.run build/
 
